和教育服务条款ios精简版

--- a/edu_service.html
+++ b/edu_service.html
@@ -29,7 +29,7 @@
 	1) 中国移动“和教育”云平台服务的具体内容由中国移动“和教育”云平台根据实际情况及用户的选择提供，例如学科资源、资讯、社区、线上线下活动、客户端等。
 	</p>
 	<p class="term_content_indent">
-	2) 用户理解，中国移动“和教育”云平台仅提供相关的网站和客户端服务，除此之外与相关网站或客户端服务有关的设备（如个人电脑、手机、及其他与接入互联网或移动网有关的装置）及所需的费用（如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费以及购买的学习计划包等）均应由用户自行负担。
+	2) 用户理解，中国移动“和教育”云平台仅提供相关的网站和客户端服务。
 	</p>
 	</dd>
 	<dt class="term_title">3.权利与义务</dt>
@@ -41,7 +41,7 @@
 	2) 用户注册成功后，中国移动“和教育”云平台将给予每个用户一个用户帐号及相应的密码，该用户帐号和密码由用户负责保管；用户应当对以其用户帐号进行的所有活动和事件负法律责任。<b style="font-weight:800">因您保管不善而可能导致遭受盗号或密码失窃的责任，由您自行承担。</b>
 	</p>
 	<p class="term_content_indent term_content_part">
-	3) 用户同意接受中国移动“和教育”云平台通过电子邮件或其他方式向用户发送的商品促销或其他相关商业信息。根据用户的选择可以退订此类商业信息。
+	3) 用户同意接受中国移动“和教育”云平台通过电子邮件或其他方式向用户发送的推荐信息。
 	</p>
 	<p class="term_content_indent term_content_part">
 	4) 用户在使用中国移动“和教育”云平台服务过程中，必须遵循以下原则：
@@ -89,19 +89,16 @@
 	4) 在您使用第三方提供的产品或服务时，中国移动“和教育”云平台仅作为平台的提供者，提供与具体产品或服务无关的中立技术支持服务。
 	</p>
 	<p class="term_content_indent term_content_part">
-	5) 对于第三方提供的产品或服务，中国移动“和教育”云平台不参与产品或服务的开发和运营，且不对其任何内容进行修改、编辑或整理，同时不对其作任何形式的担保。因产品或服务的使用或购买而发生的任何纠纷，由第三方与您协商解决，相关责任和赔偿由第三方单独承担，与中国移动“和教育”云平台无关。
+	5) 对于第三方提供的产品或服务，中国移动“和教育”云平台不参与产品或服务的开发和运营，且不对其任何内容进行修改、编辑或整理，同时不对其作任何形式的担保。
 	</p>
 	<p class="term_content_indent term_content_part">
-	6) 您使用第三方产品或服务产生的费用可能由中国移动“和教育”云平台代为收取，但并不表示中国移动“和教育”云平台需为第三方提供的产品或服务承担任何责任。
+	6)当您使用第三方产品或服务时，您同意中国移动“和教育”云平台将您提供的相关个人信息向第三方提供。
 	</p>
 	<p class="term_content_indent term_content_part">
-	7)当您使用第三方产品或服务时，您同意中国移动“和教育”云平台将您提供的相关个人信息向第三方提供。
+	7) 由于与中国移动“和教育”云平台链接的其它网站所造成之个人资料泄露及由此而导致的任何法律争议和后果，中国移动“和教育”云平台不负任何责任。
 	</p>
 	<p class="term_content_indent term_content_part">
-	8) 由于与中国移动“和教育”云平台链接的其它网站所造成之个人资料泄露及由此而导致的任何法律争议和后果，中国移动“和教育”云平台不负任何责任。
-	</p>
-	<p class="term_content_indent term_content_part">
-	9) 中国移动“和教育”云平台如因系统维护或升级而需暂停服务时，将事先公告。若因线路及非本公司控制范围外的硬件故障或其它不可抗力而导致暂停服务，于暂停服务期间造成的一切不便与损失，中国移动“和教育”云平台不负任何责任。
+	8) 中国移动“和教育”云平台如因系统维护或升级而需暂停服务时，将事先公告。若因线路及非本公司控制范围外的硬件故障或其它不可抗力而导致暂停服务，于暂停服务期间造成的一切不便与损失，中国移动“和教育”云平台不负任何责任。
 	</p>
 	</dd>
 	<dt class="term_title">5.版权声明</dt>
@@ -227,7 +224,7 @@
 	● 个人的背景资料：职业、教育程度、家庭状况、爱好等；
 	</p>
 	<p class="term_content_part term_content_part_indent">
-	未经您同意并确认之前，本网站不会将您为相应活动提供的个人资料用于其它目的。但当政府相关依照法定程序要求本网站披露您个人资料时，本网站均有义务免责提供。
+	未经您同意并确认之前，本网站不会将您为相应活动提供的个人资料用于其它目的。但当政府相关依照法定程序要求本网站披露您个人资料时，本网站均有义务提供。
 	</p>
 	<p class="term_content_indent term_content_part">
 	2) 个人空间等
@@ -257,7 +254,7 @@
 	<dt class="term_title">9.免责声明</dt>
 	<dd class="term_content">
 	<p class="term_content_indent term_content_part">
-	1) “和教育”云平台对于任何包含、经由或连接、下载或从任何与本网站有关服务所获得的任何内容、信息或广告，不声明或保证其正确性或可靠性；并且<b style="font-weight:800;color:#000;">对于用户经本服务上的广告、展示而购买、取得的任何产品、信息或资料，本网站不负保证责任。用户自行负担使用本服务的风险。</b>
+	1) “和教育”云平台对于任何包含、经由或连接、下载或从任何与本网站有关服务所获得的任何内容、信息或广告，不声明或保证其正确性或可靠性；并且<b style="font-weight:800;color:#000;">对于用户经本服务上的广告、取得的任何产品、信息或资料，本网站不负保证责任。用户自行负担使用本服务的风险。</b>
 	</p>
 	<p class="term_content_indent term_content_part">
 	2) 本网站提供的信息内容来源包括自身提供、与合作方共同提供和不特定用户提供三种形式。<b style="font-weight:800;color:#000;">本网站对不特定用户提供的信息内容，只负责提供信息存储空间，不对具体信息内容作任何担保，也不承担任何商业责任，如果内容提供者提供的资源、资源有侵犯个人/单位权益，本网站有责任下架内容，停止侵权，但相应侵权责任向内容提供者追讨。</b>
